--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,6 +1,20 @@
 {
-  "extends": ["eslint:recommended", "preetier", "preetier/react"],
-  "plugins": [],
+  //set of rules
+  "extends": [
+    "eslint:recommended", 
+    "plugin:import/errors",
+    "plugin:react/recommended",
+    "plugin:react/a11y", 
+    "preetier", 
+    "preetier/react"
+  ],
+  //turn off-on specific rules
+  "rules":{
+    "react/prop-types":0,
+    "no-console":1
+  },
+  //new abilities
+  "plugins": ["react", "import", "jsx"],
   "parserOptions": {
     "ecmaVersion": 2020,
     "sourceType": "module",
@@ -12,5 +26,10 @@
     "es6": true,
     "browser": true,
     "node": true
+  },
+  "settings": {
+    "react": {
+      "version": "detect"
+    }
   }
 }
