--- a/package.json
+++ b/package.json
@@ -21,8 +21,12 @@
   },
   "homepage": "https://github.com/nightwarriorftw/adopt-me#readme",
   "devDependencies": {
+    "babel-eslint": "^10.0.3",
     "eslint": "^6.8.0",
     "eslint-config-prettier": "^6.9.0",
+    "eslint-plugin-import": "^2.20.0",
+    "eslint-plugin-jsx-a11y": "^6.2.3",
+    "eslint-plugin-react": "^7.18.0",
     "parcel-bundler": "^1.12.4",
     "prettier": "^1.19.1"
   },
