--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "App.js",
   "scripts": {
     "dev": "parcel src/index.html",
-    "format": "prettier \"src/**/*.{js, html}\" --write",
+    "format": "prettier \"src/**/*.{js, jsx}\" --write",
     "lint": "eslint \"src/**/*.{js, jsx}\" --quite",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
