--- a/.babelrc
+++ b/.babelrc
@@ -1,6 +1,6 @@
 {
   "presets": [
-    "@babel/preset-reset",
+    "@babel/preset-react",
     "@babel/preset-env",
     [
       "@emotion/babel-preset-css-prop",
@@ -9,5 +9,5 @@
       }
     ]
   ],
-  "plugins": ["@babel/plugin-proposa;-class-properties"]
+  "plugins": ["@babel/plugin-proposal-class-properties"]
 }
