--- a/package.json
+++ b/package.json
@@ -4,9 +4,11 @@
   "description": "",
   "main": "App.js",
   "scripts": {
+    "build": "parcel build --public-url ./dist/ src/index.html",
     "dev": "parcel src/index.html",
     "format": "prettier \"src/**/*.{js, jsx}\" --write",
     "lint": "eslint \"src/**/*.{js, jsx}\" --quite",
+    "start": "npm run build && babel-node server/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -36,10 +38,13 @@
     "prettier": "^1.19.1"
   },
   "dependencies": {
+    "@babel/node": "^7.10.3",
     "@emotion/babel-preset-css-prop": "^10.0.27",
     "@emotion/core": "^10.0.28",
     "@frontendmasters/pet": "^1.0.3",
     "@reach/router": "^1.3.3",
+    "babel-cli": "^6.26.0",
+    "express": "^4.17.1",
     "react": "^16.13.0",
     "react-dom": "^16.13.0"
   },
