--- a/package.json
+++ b/package.json
@@ -41,7 +41,10 @@
     "@frontendmasters/pet": "^1.0.3",
     "@reach/router": "^1.3.3",
     "react": "^16.13.0",
-    "react-dom": "^16.13.0"
+    "react-dom": "^16.13.0",
+    "react-redux": "^7.2.0",
+    "reducers": "^3.0.0-alpha",
+    "redux": "^4.0.5"
   },
   "browserslist": [
     "last 2 Chrome versions",
