--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "dev": "parcel src/index.html",
     "format": "prettier \"src/**/*.{js, jsx}\" --write",
     "lint": "eslint \"src/**/*.{js, jsx}\" --quite",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "repository": {
     "type": "git",
@@ -32,6 +32,7 @@
     "eslint-plugin-jsx-a11y": "^6.2.3",
     "eslint-plugin-react": "^7.19.0",
     "eslint-plugin-react-hooks": "^2.5.1",
+    "jest": "^26.1.0",
     "parcel-bundler": "^1.12.4",
     "prettier": "^1.19.1"
   },
@@ -40,6 +41,7 @@
     "@emotion/core": "^10.0.28",
     "@frontendmasters/pet": "^1.0.3",
     "@reach/router": "^1.3.3",
+    "@testing-library/react": "^10.4.3",
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
     "react-redux": "^7.2.0",
